First draft of html, added picture

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 
     </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Daulen Zhangabylov - Coach, Project Manager</h1>
+    <p>Welcome to my website!</p>
+    <p>My name is Daulen, I am Project Manager and a certified professional coach. I have been working on projects since 1992. I started as a plant unit operator and achieve Project Director and Technical Director roles. During my professional career, I worked with Chevron, Shell, KBR, KMG, and others.
+        Now I specialize in helping people involved in project management area - project and construction managers, project control and technical specialists. Together we can achieve your goals by coping with the issues that are causing you distress, anxiety, and stress.   .</p>
     <script src="script.js"></script>
-
+    <img src="Daulen.webp" alt="Daueln photo">
 </body>
 </html>
 
