updated CSS and html

--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
 
     </head>
 <body>
+    <section>
     <h1>Daulen Zhangabylov - Coach, Project Manager</h1>
-    <p>Welcome to my website!</p>
-    <p>My name is Daulen, I am Project Manager and a certified professional coach. I have been working on projects since 1992. I started as a plant unit operator and achieve Project Director and Technical Director roles. During my professional career, I worked with Chevron, Shell, KBR, KMG, and others.
-        Now I specialize in helping people involved in project management area - project and construction managers, project control and technical specialists. Together we can achieve your goals by coping with the issues that are causing you distress, anxiety, and stress.   .</p>
+    <h3>Welcome to my website!</h3>
+    <p id="bio">My name is Daulen, I am Project Manager and a certified Professional Coach. I have been working on projects since 1992. I started as a plant unit operator and achieve Project Director and Technical Director roles. During my professional career, I worked with Chevron, Shell, KBR, KMG, and others.
+        Now I specialize in helping people involved in project management area - project and construction managers, project control and technical specialists. Together we can achieve your goals by coping with the issues that are causing you distress, anxiety, and stress. <img src="Daulen.webp" alt="Daulen photo">  </p>
     <script src="script.js"></script>
-    <img src="Daulen.webp" alt="Daueln photo">
+    </section> 
+    
+    <section>
+    <h3>OVERCOME YOUR CHALLENGES!</h3>
+    <p id="CTA"> You have to face unclear or undefined project goals, miscommunication, poor collaboration, and misalignment of your project team? Our approach is uniquely designed to help you to create your own formula for success.  We help managers determine when to embrace change and when to stay the course.</p>
+</section> 
+<section>
+    <h3>MY CONTACTS</h3>
+    <p id="contacts"> e-mail: daulen@projectlabexpert.com</p>
+
+    <h3>SCHEDULE A SESSION </h3>
+    <p id="booking"> Use the link below to book a session <br><a href="https://daulen-zhangabylov.youcanbook.me">schedule a call</a></p>
+    
+</section>
 </body>
 </html>
 
