--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ function mouseUp() {
 
 
 <article class="w3-container w3-brown" >
-
- <p>Linkeding     Twitter</p>
+<a href="https://www.linkedin.com/in/daulen-zhangabylov-14759411/" >Linkedin</a>
+ 
 </article>
 
 </body>
